Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2007-02-20 Kimmo
 PATCH: [ 1663798 ] Add option and menuitem for file compare selection margin
  Src: Merge.rc MergeEditView.cpp MergeEditView.h OptionsDef.h OptionsInit.cpp
   resource.h
  Src/editlib: ccrystaltextview.cpp
  Src/Languages/*: Merge*.rc

2007-02-19 Kimmo
 PATCH: [ 1663012 ] Fix total count for compare progress dialog
  Src: DirCompProgressDlg.cpp DirCompProgressDlg.h
 Bug: [ 1663197 ] s/inproper/improper [in Changes.txt]
  Src: Changes.txt
 PATCH: [ 1642876 ] Open manual for command line help
  Src: Merge.cpp Merge.h Merge.rc resource.h
  Src/Languages/*: Merge*.rc

2007-02-17 Jan Hryz
 Czech translation - update
  Src/Languages/Czech/MergeCzech.rc

2007-02-17 Kimmo
 PATCH: [ 1662002 ] Use two threads for folder compare
  Src: Diffcontext.cpp Diffcontext.h DiffThread.cpp DiffThread.h DirScan.cpp
   DirScan.h

2007-02-14 Tim
 PATCH: [ 1640274 ] Icons for folder compare popup menu
  Src: MainFrm.cpp Merge.dsp Merge.rc resource.h
  Src/res new files: both.bmp left.bmp left_to_browse.bmp left_to_right.bmp
   move_left_to_browse.bmp move_right_to_browse.bmp right.bmp
   right_to_browse.bmp right_to_left.bmp
  Src/Languages/*: Merge*.rc

2007-02-14 Kimmo
 PATCH: [ 1659183 ] Add Vista security attributes to manifest files
  Src/res: WinMerge.exe.manifest WinMergeU.exe.manifest

2007-02-12 Kimmo
 PATCH: [ 1657664 ] Swedish translation update for Backup options
  Submitted by Hans Eriksson
  Src/Languages/Swedish: MergeSwedish.rc

2007-02-11 Kimmo
 Fix compile with VC6 (doesn't have CString::Append() or CString::AppendChar())
  Src: MainFrm.cpp PropBackups.cpp

2007-02-10 Kimmo
 PATCH: [ 1650831 ] Polish translation update for WinMerge 2.6.4
  Submitted by dr_prozac
   Src/Languages/Polish: MergePolish.rc

2007-02-08 Kimmo
 Add accelerator keys to new Backup options dialog
  Src: Merge.rc
  Src/Languages/*: Merge*.rc

2007-02-07 Tim